@@ -1,0 +1,2 @@
+class TiposPagamento < ActiveRecord::Base
+end
