@@ -5,7 +5,7 @@
 <p><%= link_to 'Apartamentos', :controller => "apartamentos", :action => "index" %></p>
 <p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
 <p><%= link_to 'Serviços', :controller => "servicos", :action => "index" %></p>
-
+<p><%= link_to 'Tipos de pagamentos', :controller => "tipos_pagamentos", :action => "index" %></p>
 
 <h2>:: Hospedes</h2>
 <p><%= link_to 'Hospedes', :controller => "hospedes", :action => "index" %></p>
